service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitops-demo-service
spec:
  selector:
    app: gitops-demo
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
